--- a/exo5.html
+++ b/exo5.html
@@ -5,7 +5,7 @@
     <title>AngularJS Partie 1 Exercice 5</title>
   </head>
   <body>
-    <div ng-app class="calcul">
+    <div ng-app class="calcul"><!--Application du ng-app pour toute les div-->
       <h1>AngularJS Partie 1 Exercice 5</h1>
       <div>
         220 + 304 = {{220+304}}
@@ -20,6 +20,6 @@
         220/304 = {{220 / 304}}
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script><!--Appel du script-->
   </body>
 </html>
